--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -99,16 +99,11 @@ textarea {
 }
 
 .saveBtn {
-  /* border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px; */
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
   font-size: 4.75rem;
-}
-
-.saveBtn:hover {
-  font-size: 5rem;
-  transition: all 0.3s ease-in-out;
 }
 
 .timeBlockList {
